--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "start": "node index.js",
-        "dev": "nodemon"
+        "dev": "nodemon",
+        "deploy": "vercel --prod"
     },
     "keywords": [],
     "author": "",
@@ -15,5 +16,6 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "mongodb": "^4.11.0"
-    }
+    },
+    "homepage": "https://binary-bua-server.vercel.app/"
 }
